package org.springframework.samples.petclinic.web;

//@Controller
//public class WelcomeController {
//	
//	
//	  @GetMapping({"/","/welcome"})
//	  public String welcome(Map<String, Object> model) {	    
//
//	    return "index.html";
//	  }
//}
