@startuml

hide circle


package " Presentation Layer " as Presentation {
    hide members
    class WelcomeController
    class UserController
    class OwnerController
    class PetController
    class VisitController
    class VetController
}

package " Business Logic Layer " as BusinessLogic {
    hide members
    class AuthoritiesService
    class UserService
    class OwnerService
    class PetService
    class VisitService
    class VetService
}

package " Resources Layer " as Resources {
    hide attributes
    interface AuthoritiesRepository 
    interface UserRepository 
    interface PetRepository
    interface VisitRepository {
        List<Visit> findVisitByPetId(Integer PetId)
    }
    interface OwnerRepository {
        List<Owner> findByLastName(String lastname)
    }
}

UserController  ..> OwnerService
OwnerController ..> OwnerService
PetController ..> OwnerService
PetController ..> PetService
VisitController ..> PetService
VisitController ..> VetService
VetController ..> VetService

AuthoritiesService ..> UserService
OwnerService ..> UserService
OwnerService ..> AuthoritiesService

OwnerService ..> OwnerRepository
UserService ..> UserRepository
AuthoritiesService ..> AuthoritiesRepository
PetService ..> PetRepository
VisitService ..> VisitRepository

@enduml
